[ADD]Add 插件构建过程必要的default 配置与配置设定接口及模型
