# pkg/db/model/tenant.go
@@ -1,19 +1,18 @@
-
 // RAINBOND, Application Management Platform
 // Copyright (C) 2014-2017 Goodrain Co., Ltd.
- 
+
 // This program is free software: you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
 // the Free Software Foundation, either version 3 of the License, or
 // (at your option) any later version. For any non-GPL usage of Rainbond,
 // one or multiple Commercial Licenses authorized by Goodrain Co., Ltd.
 // must be obtained first.
- 
+
 // This program is distributed in the hope that it will be useful,
 // but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 // GNU General Public License for more details.
- 
+
 // You should have received a copy of the GNU General Public License
 // along with this program. If not, see <http://www.gnu.org/licenses/>.
 
@@ -413,7 +412,7 @@ type TenantPluginDefaultENV struct {
 	//配置项值
 	ENVValue string `gorm:"column:env_value"`
 	//使用人是否可改
-	Change bool `gorm:"column:change"`
+	Change bool `gorm:"column:change;default:false"`
 }
 
 //TableName 表名
@@ -480,6 +479,7 @@ type TenantServicePluginRelation struct {
 	VersionID string `gorm:"column:version_id;size:32"`
 	PluginID  string `gorm:"column:plugin_id;size:32"`
 	ServiceID string `gorm:"column:service_id;size:32"`
+	Switch    bool   `gorm:"column:switch;default:false"`
 }
 
 //TableName 表名
